tests/cases/compiler/classAndInterface1.ts
 class cli { } // error
interface cli { } // error